--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -48,6 +48,8 @@ ul, ol {
   font-size: 14px;
   margin-right: 2px;
   vertical-align: baseline; }
+  .fa.fa-spin {
+    color: #999; }
 
 .date {
   color: #ccc; }
