--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -20,11 +20,11 @@ $link-hover-color:#205F7E;
 $input-color-placeholder:#ddd;
 $border-color:#f0f0f0;
 
-$action-blue:#3498db;//#0084ff;
-$action-blue-hover:#2980b9;//#007AEB;
+$action-blue:#3498db;
+$action-blue-hover:#5dade2;
 
-$action-green:#30C880;
-$action-green-hover:#2CB675;
+$action-green:#1abc9c;
+$action-green-hover:#48c9b0;
 
 $action-red:#e74c3c;
 $action-red-hover:#fc5140;
