--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -449,29 +449,28 @@
 }
 //reg,login
 .reg-form,.login-form{
-    position:absolute;
-    z-index:5;
+    position:fixed;
+    top:120px;
+    z-index:1;
     padding:50px 100px;
     @include border-radius(5px);
-    ront-size:14px;
+    font-size:14px;
     color:#fff;
     background:rgba(0,0,0,.7);
     width:540px;
     margin:0 150px;
-    text-align:center;
     h1{
+        text-align:center;
         margin-bottom:30px;
     }
     .row{
-        position:relative;
         margin:10px 0 0 0;
         height:70px;
     }
     input[type="text"],input[type="password"]{
-        position:absolute;
-        left:50px;
         width:80%;
         padding:10px 2%;
+        margin-left:2px;
         font-size:16px;
         height:20px;
         line-height:20px;
@@ -486,8 +485,6 @@
     }
     label{
         text-align:center;
-        position:absolute;
-        left:0;
         width:50px;
         line-height:40px;
     }
@@ -500,30 +497,29 @@
         height:40px;
         left:50px;
     }
+    .rememberme{
+        margin-left:54px;
+    }
     .act{
-        .rememberme{
-            position:absolute;
-            left:50px;
-            top:-20px;
-        }
+        @include clearfix();
+        text-align:left;
         button{
-            position:absolute;
-            top:20px;
-            left:50px;
+            margin-left:56px;
+            float:left;
             height:40px;
             padding:0 30px;
-            border:none;
-            color:#fff;
             background:$action-blue;
-            @include border-radius(3px);
             &:hover{
                 background:$action-blue-hover;
             }
+            .fa{
+                color:#fff;
+            }
         }
         .goregister,.gologin{
-            position:absolute;
-            top:30px;
-            right:9%;
+            height:40px;
+            margin-left:30px;
+            line-height:40px;
             color:$action-green;
             &:hover{
                 color:$action-green-hover;
